<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.itemdetail.ItemDetailActivity">

    <TextView
        android:id="@+id/item_detail_selection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/item_detail_selection_str"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/item_detail_sku"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/nunito"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/item_detail_selection"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="T2006" />

    <TextView
        android:id="@+id/item_detail_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="20dp"
        android:fontFamily="@font/nunito"
        android:text="@string/item_detail_subtitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item_detail_selection" />

    <TextView
        android:id="@+id/item_detail_total_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:fontFamily="@font/nunito"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/item_detail_subtitle"
        app:layout_constraintTop_toTopOf="@+id/item_detail_subtitle"
        tools:text="100,23" />

    <TextView
        android:id="@+id/item_detail_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/nunito"
        android:text="@string/item_detail_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item_detail_subtitle" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/item_detail_recyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item_detail_title" />

</androidx.constraintlayout.widget.ConstraintLayout>